# fastapi_shop_example

./: README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  schemas.py
backend/: config.py  db.py  db_depends.py  managers.py
ci/: Dockerfile  Dockerfile.prod
migrations/: env.py
migrations/versions/: 4b46aeb0a579_initial_migration.py  ba6062eccbd4_create_user_model.py
models/: category.py  products.py  user.py
nginx/: Dockerfile  nginx.conf
routers/: auth.py  category.py  products.py
