[tool.poetry]
name = "course-shop"
version = "0.1.0"
description = ""
authors = ["DGrekov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
sqlalchemy = "^2.0.36"
uvicorn = "^0.32.0"
alembic = "^1.13.3"
slugify = "^0.0.1"
python-slugify = "^8.0.4"
asyncpg = "^0.30.0"
python-multipart = "^0.0.12"
passlib = "^1.7.4"
bcrypt = "^4.2.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
loguru = "^0.7.2"
celery = "^5.4.0"
redis = "^5.1.1"
gevent = "^24.10.3"
pydantic-settings = "^2.6.0"
websocket = "^0.2.1"
websockets = "^13.1"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
